# geeRPC

./: BENCHMARK_REPORT.md  CODEGEN_SUMMARY.md  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
geerpc/: Cargo.toml
geerpc-benchmarks/: Cargo.toml  bench_large.yaml  bench_medium.yaml  bench_small.yaml
geerpc-benchmarks/benches/: common.rs  concurrency.rs  dispatch_overhead.rs  latency.rs  serialization.rs  throughput.rs
geerpc-benchmarks/src/: common.rs  lib.rs
geerpc-codegen/: Cargo.toml  README.md
geerpc-codegen/src/: lib.rs
geerpc-codegen/tests/: codegen_tests.rs  e2e_test.rs
geerpc-codegen/tests/fixtures/: complex_types.yaml  multi_field.yaml  multi_method.yaml  simple.yaml
geerpc/src/: client.rs  lib.rs  server.rs
geerpc/tests/: integration_tests.rs
sample-client/: Cargo.toml
sample-client/src/: main.rs  ping_client.rs
sample-server/: Cargo.toml
sample-server/src/: main.rs  ping_server.rs
