[workspace]
resolver = "3"
members = ["sample-client","sample-server","geerpc"]

[workspace.dependencies]
snafu = "0.8.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
async-trait = "0.1"