[package]
name = "geerpc-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "dispatch_overhead"
harness = false

[[bench]]
name = "concurrency"
harness = false

[dependencies]
geerpc = { path = "../geerpc" }
geerpc-codegen = { path = "../geerpc-codegen" }
tokio = { workspace = true }
serde = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
async-trait = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

