[package]
name = "geerpc-codegen"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
serde = { workspace = true }
serde_yaml = "0.9"
heck = "0.5"

[dev-dependencies]
trybuild = "1.0"
tokio = { workspace = true }
geerpc = { path = "../geerpc" }
bincode = { workspace = true }
async-trait = { workspace = true }

