[package]
name = "geerpc"
version = "0.1.0"
edition = "2021"

[features]
internal-testing = []

[dependencies]
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
geerpc-codegen = { path = "../geerpc-codegen" }
async-trait = { workspace = true }

[dev-dependencies]