[package]
name = "sample-client"
version = "0.1.0"
edition = "2024"

[dependencies]
geerpc = { path = "../geerpc" }
tokio = { workspace = true } 
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
snafu = { workspace = true }
async-trait = { workspace = true }